feat: add dark mode