@@ -26,9 +26,19 @@ application {
     getMainClass().set('agh.darwinworld.App')
 }
 
+tasks.named('run') {
+    jvmArgs += [
+            '--add-opens', 'javafx.graphics/javafx.stage=ALL-UNNAMED',
+            '--add-opens', 'javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
+            '--add-opens', 'javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED'
+    ]
+}
+
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation 'net.java.dev.jna:jna:5.13.0'
+    implementation 'net.java.dev.jna:jna-platform:5.13.0'
 }
 
 test {
